--- a/styles/index.css
+++ b/styles/index.css
@@ -80,6 +80,12 @@ button:active {
   padding: 3vh 2vw 3vh 2vw;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2),0px 5px 10px rgba(0, 0, 0, 0);
   width: 22vw;
+
+
+}
+
+.offers-container .offers-child:hover {
+ transform: translateY(-8px);
 }
 
 .offers-icon {
