--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,9 @@
 
-
 * {
   margin: 0%;
   padding: 0%;
   font-family: sans-serif;
+  font-weight: 500;
 }
 
 body {
@@ -54,7 +54,7 @@ body {
 }
 
 .undo:hover {
-  transform: scale(0.96);
+  transform: scale(0.98);
 }
 
 .undo:active {
@@ -131,6 +131,7 @@ body {
 
 .contact-item {
   margin: 25px 0 25px 0;
+  text-decoration: none;
 }
 
 .footer-nav {
