--- a/styles/lessons.css
+++ b/styles/lessons.css
@@ -108,7 +108,7 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: left;
-  color: #79A3B1;
+  background-color: #79A3B1;
 }
 
 .side-content {
