--- a/styles/index.css
+++ b/styles/index.css
@@ -172,6 +172,10 @@ button:active {
   justify-content: center;
   
 }
+.offers-container .offers-child:hover {
+ transform: translateY(0px);
+ transform: scale(1.1)
+}
 
 .about-img {
   width: 40vw;
