--- a/styles/index.css
+++ b/styles/index.css
@@ -272,6 +272,7 @@ button:active {
         width: 80vw;
         margin: 3vh 0 3vh 0;
         padding: 3vh 5vw 3vh 5vw;
+        height: auto;
       }
       
       .offers-child .title {
